--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -12,7 +12,7 @@ body {
       text-align: center;
     }
 
-    header h1 {
+    header, h1 {
       margin: 1;
       font-size: 2rem;
     }
@@ -22,11 +22,11 @@ body {
       background-color: #fdfcfb; 
     }
 
-    main h2 {
+    main, h2 {
       color: #6b4f3a;
     }
 
-    main p.tagline {
+    main, p.tagline {
       font-style: italic;
       color: #7c6a58;
     }
