--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -26,7 +26,7 @@ body {
       color: #6b4f3a;
     }
 
-    main, p.tagline {
+    main, .tagline {
       font-style: italic;
       color: #7c6a58;
     }
