--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -17,11 +17,18 @@ h1 {
   margin: 0;
   font-size: 2rem;
 }
-
+nav a + a::before {
+  content: "| |";
+  margin: 0 8px;
+  color: white;
+}
 /* Main Content */
 main {
   padding: 2rem;
   background-color: #fdfcfb; 
+}
+.italic-text {
+  font-style: italic;
 }
 
 h2 {
