--- a/itis3135/dozephin-site/styles.css
+++ b/itis3135/dozephin-site/styles.css
@@ -13,6 +13,10 @@ header {
   padding: 1.5rem;
   border-bottom: 3px solid #78b2ae;
 }
+header nav a{
+  content: "|";
+  color: white;
+}
 
 h1 {
   margin: 0;
