--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,13 +1,15 @@
 <header>
-        <h1>Zainab Dar's Zen Dolphin | ITIS3135</h1>
+        <h1>Zainab Dar's Zen Dolphin | ITIS 3135 Home</h1>
+        <p class="tagline">Come along as I learn how to build my first webpage!</p>
+
         <nav>
-            <a href = "./index.html">Home</a>
-        
-            <a href = "./introduction.html">Introduction</a>
+            <a href = "./index.html"> Home </a>
             
-            <a href = "./contract.html">Contract</a>
+            <a href = "./introduction.html"> Introduction </a>
+        
+            <a href = "./contract.html"> Contract </a>
             
             <a href = "./website_evaluations.html"> Website Evaluation </a>
 
         </nav>
-</header>
+    </header>
