--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,5 +1,5 @@
 <header>
-        <h1>Zainab Dar's Zen Dolphin | ITIS 3135 Home</h1>
+        <h1>Zainab Dar's Zen Dolphin | ITIS 3135 </h1>
         <p class="tagline">Come along as I learn how to build my first webpage!</p>
 
         <nav>
