update link name

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -7,7 +7,7 @@
        	
         <a href="https://zainab-dar.github.io"> Github.io </a>
        	
-		<a href="https://webpages.charlotte.edu/zdar1/itis3135"> ITIS3135 </a>
+		<a href="https://webpages.charlotte.edu/zdar1/itis3135"> ITIS3135.io </a>
         
         <a href="https://www.freecodecamp.org/zainabdar"> freeCodeCamp </a>
         
