--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -5,10 +5,8 @@
        	
         <a href="https://github.com/zainab-dar"> GitHub </a>
        	
-        <a href="https://zainab-dar.github.io"> Github.io </a>
-       	
-		<a href="https://webpages.charlotte.edu/zdar1/itis3135"> ITIS3135.io </a>
-        
+        <a href="https://zainab-dar.github.io"> itis3135.io </a>
+       	        
         <a href="https://www.freecodecamp.org/zainabdar"> freeCodeCamp </a>
         
         <a href="https://www.codecademy.com/profiles/zainab_dar"> Codeacademy </a>
