--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10px;
   font-family: Arial, sans-serif;
   background-color: #f8f5f1;
   color: #3e2f24;
@@ -27,8 +27,8 @@ header nav a {
 }
 
 /* Add dividers */
-.header-nav a::before,
-.header-nav a::after {
+.header nav a::before
+.header nav a::after{
   content: "|";
   color: white;
 }
