--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -1,14 +1,19 @@
-<footer>
-        <div class="footer-nav">
-        <nav>
-        <a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>	
-        <a href="https://github.com/zainab-dar">GitHub</a> 	
-        <a href="https://zainab-dar.github.io">itis3135.io </a>     	        
-        <a href="https://www.freecodecamp.org/zainabdar">freeCodeCamp</a>  
-        <a href="https://www.codecademy.com/profiles/zainab_dar">Codeacademy</a>
-        <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a> 
-        <a href="./dozephin-site/about.html">Dozephin</a>
-        </nav>
-        </div>
-        <p><a href = "./dardesigns.com/">Dar Designs</a> &copy; 2025</p>
+ <footer>
+    <div class = "footer-nav">
+    <nav>
+       	
+    <a href="https://github.com/zainab-dar">GitHub</a>
+       	       	
+    <a href="https://zainab-dar.github.io/itis3135/">itis3135.io</a>
+        
+    <a href="https://www.freecodecamp.org/zainabdar">freeCodeCamp</a>
+        
+    <a href="https://www.codecademy.com/profiles/zainab_dar">Codeacademy</a>
+        
+    <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
+    
+    <a href="./itis3135/dozephin-site/about.html">Dozephin</a>
+    
+    </nav>
+    </div>
 </footer>
