--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -1,7 +1,8 @@
  <footer>
     <div class = "footer-nav">
     <nav>
-       	
+    <a href="https://webpages.charlotte.edu/zdar1/">CLT Web</a>
+
     <a href="https://github.com/zainab-dar">GitHub</a>
        	       	
     <a href="https://zainab-dar.github.io/itis3135/">itis3135.io</a>
