--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -13,7 +13,7 @@
         
     <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
     
-    <a href="https://zainab-dar.github.io/itis3135/dozephin-site/about.html">Dozephin</a>
+    <a href="https://webpages.charlotte.edu/zdar1/itis3135/dozephin-site/about.html">Dozephin</a>
     
     </nav>
     </div>
