--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -7,5 +7,6 @@
             <a href = "./introduction.html"> Introduction </a>
             <a href = "./contract.html"> Contract </a>   
             <a href = "./website_evaluations.html"> Website Evaluation </a>
+            <a href = "./cRAPPY_PAGE.html"> CRAPPY Webpage </a>
         </nav>
 </header>
