--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -38,7 +38,15 @@ header nav a:not(:last-child)::after {
 .secondary-nav{
   margin: 15px;
 }
+h3 a {
+  color: #222;       /* make sure link text is visible */
+  text-decoration: none;
+}
 
+h3 a:hover {
+  color: #0066cc;    /* visible hover effect */
+  text-decoration: underline;
+}
 /* Main Content */
 main {
   margin: 2rem auto;
