--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -154,6 +154,7 @@ footer p {
 @media screen and (min-width: 981px) and (max-width: 1400px) {
   main {
     width: 85%; /* slightly narrower */
+    margin: 0 auto;
   }
 }
 
@@ -161,6 +162,7 @@ footer p {
 @media screen and (min-width: 601px) and (max-width: 980px) {
   main {
     width: 95%; 
+    margin: 0 auto;
   }
 }
 
@@ -168,5 +170,6 @@ footer p {
 @media screen and (max-width: 600px) {
   main {
     width: 98%;  
+    margin: 0 auto;
   }
 }
