--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -69,6 +69,8 @@ h1 {
 h2 {
   color: #6b4f3a;
   font-size: 1.5rem;
+  text-align: center;
+
 }
 
 .tagline {
@@ -170,4 +172,19 @@ footer p {
   main {
     width: 98%;  
   }
+}
+
+main {
+  max-width: 1200px;   
+  margin: 0 auto;      
+  padding: 2rem;       
+}
+
+section {
+  margin-bottom: 2rem; 
+}
+
+p, ul {
+  margin-bottom: 1rem;
+  line-height: 1.6;    
 }
