--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -7,7 +7,11 @@
     <a href="https://www.freecodecamp.org/zainabdar">freeCodeCamp</a>   
     <a href="https://www.codecademy.com/profiles/zainab_dar">Codeacademy</a>    
     <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
-    <a href="https://webpages.charlotte.edu/zdar1/itis3135/dozephin-site/about.html">Dozephin</a>
+    <a href="./itis3135/dozephin-site/about.html">Dozephin</a>
+    <a href="./dardesigns.com/index.html"><small>&copy; 2025 Dar Designs — dardesigns.com</small></a>
+    </nav>
+    <nav>
+
     </nav>
     </div>
 </footer>
