--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -13,7 +13,7 @@
 
   <div class="footer-credit">
     <a href="./dardesigns.com/index.html">
-      <small>&copy; 2025 Dar Designs — dardesigns.com</small>
+      <small>&copy; 2025 Dar Designs</small>
     </a>
   </div>
 </footer>
