--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -8,6 +8,7 @@
       <a href="https://www.codecademy.com/profiles/zainab_dar">Codeacademy</a>    
       <a href="https://www.linkedin.com/in/zainab-dar-630153286/">LinkedIn</a>
       <a href="./itis3135/dozephin-site/about.html">Dozephin</a>
+      <a href="./itis3135/hobby/index.html">Hobby</a>
     </nav>
   </div>
 
