--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -7,7 +7,7 @@
             <a href = "./introduction.html"> Introduction </a>
             <a href = "./contract.html"> Contract </a>   
             <a href = "./website_evaluations.html"> Website Evaluation </a>
-            <a href = "./fccfsjs_outline.html">FCC Full Stack JavaScript Outline</a>
+            <a href = "./fccfsjs_outline.html">FCC JS Outline</a>
         </nav>
           <nav class="secondary-nav">
           <a href = "https://webpages.charlotte.edu/zdar1/itis3135/stuff/cRAPPY_PAGE.html"> CRAPPY Webpage </a>
