--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -11,5 +11,7 @@
         </nav>
           <nav class="secondary-nav">
           <a href = "https://webpages.charlotte.edu/zdar1/itis3135/stuff/cRAPPY_PAGE.html"> CRAPPY Webpage </a>
+          <a href="./hobby/index.html">Hobby</a>
+
     </nav>
 </header>
