--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -8,6 +8,7 @@
             <a href = "./contract.html"> Contract </a>   
             <a href = "./website_evaluations.html"> Website Evaluation </a>
             <a href = "./fccfsjs_outline.html">FCC JS Outline</a>
+            <a href = "./intro_form.html">Intro Form</a>
         </nav>
           <nav class="secondary-nav">
           <a href = "https://webpages.charlotte.edu/zdar1/itis3135/stuff/cRAPPY_PAGE.html"> CRAPPY Webpage </a>
