--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -9,7 +9,8 @@
             <a href = "./website_evaluations.html"> Website Evaluation </a>
             <a href = "./fccfsjs_outline.html">FCC JS Outline</a>
             <a href = "./intro_form.html">Intro Form</a>
-            <a href = "./project_overview.html">Client Site</a>
+            <a href = "./project_overview.html">Client Overview</a>
+            <a href = "./mtc_client/index.html">Client Site</a>
         </nav>
           <nav class="secondary-nav">
           <a href = "https://webpages.charlotte.edu/zdar1/itis3135/stuff/cRAPPY_PAGE.html"> CRAPPY Webpage </a>
