--- a/itis3135/mtc_client/style.css
+++ b/itis3135/mtc_client/style.css
@@ -35,7 +35,7 @@ header {
   font-weight: bold;
 }
 
-.navbar a.active,
+.active,
 .navbar a:hover {
   background-color: #000; /* black on hover or active */
   color: #FFD700; /* gold text remains */
