--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -16,7 +16,8 @@
           <nav class="secondary-nav">
           <a href = "https://webpages.charlotte.edu/zdar1/itis3135/stuff/cRAPPY_PAGE.html"> CRAPPY Webpage </a>
           <a href="https://webpages.charlotte.edu/zdar1/itis3135/hobby/index.html">Hobby</a>
-          <a href="">React3</a>
+          <a href="https://zainab-dar.github.io/itis3135-react/">React3</a>
+">React3</a>
 
     </nav>
 </header>
