--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -12,12 +12,11 @@
             <a href = "./intro_form.html">Intro Form</a>
             <a href = "./project_overview.html">Client Overview</a>
             <a href = "./mtc_client/index.html">Client Site</a>
+            <a href = "./review1.html">Peer Review 1</a>
         </nav>
           <nav class="secondary-nav">
           <a href = "https://webpages.charlotte.edu/zdar1/itis3135/stuff/cRAPPY_PAGE.html"> CRAPPY Webpage </a>
           <a href="https://webpages.charlotte.edu/zdar1/itis3135/hobby/index.html">Hobby</a>
           <a href="https://zainab-dar.github.io/itis3135-react/">React3</a>
-">React3</a>
-
     </nav>
 </header>
