--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -13,6 +13,7 @@
             <a href = "./project_overview.html">Client Overview</a>
             <a href = "./mtc_client/index.html">Client Site</a>
             <a href = "./review1.html">Peer Review 1</a>
+            <a href = "./review2.html">Peer Review 2</a>
         </nav>
           <nav class="secondary-nav">
           <a href = "https://webpages.charlotte.edu/zdar1/itis3135/stuff/cRAPPY_PAGE.html"> CRAPPY Webpage </a>
